--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.7",
     "uid2": "^1.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.2",
+    "supertest": "^7.0.0"
   }
 }
