--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.2",
     "supertest": "^7.0.0"
   }
